--- a/spel2/index.html
+++ b/spel2/index.html
@@ -16,22 +16,17 @@ body {
     height:100vh;
     color:white;
 }
-
 .wrapper { position:relative; text-align:center; }
-
 h1 {
     color:#00ffe7;
     text-shadow:0 0 20px #00ffe7;
 }
-
 canvas {
     background:#000;
     border-radius:20px;
     box-shadow:0 0 40px #00ffe7;
 }
-
 .ui { margin:10px 0; }
-
 .overlay {
     position:absolute;
     inset:0;
@@ -43,13 +38,11 @@ canvas {
     border-radius:20px;
     display:none;
 }
-
 .overlay h2 {
     color:#ff2e88;
     font-size:2.5rem;
     text-shadow:0 0 20px #ff2e88;
 }
-
 button {
     margin-top:15px;
     padding:12px 25px;
@@ -95,7 +88,7 @@ function init(){
     running = true;
     shootCooldown = 0;
     powerActive = false;
-    difficulty = 1200; // längre intervall = färre asteroider
+    difficulty = 1200;
     scoreEl.textContent = score;
     livesEl.textContent = lives;
     overlay.style.display="none";
@@ -103,7 +96,7 @@ function init(){
 
 // ------------------- SPAWN -------------------
 function spawnAsteroid(){
-    if(asteroids.length >= 6) return; // max 6 asteroider samtidigt
+    if(asteroids.length >= 6) return;
     const size = 25 + Math.random()*20;
     asteroids.push({
         x: Math.random()*(canvas.width-size),
@@ -130,17 +123,28 @@ function spawnPowerup(){
 
 // ------------------- DRAW -------------------
 function drawPlayer(){
+    ctx.save();
+    ctx.translate(player.x + player.w/2, player.y + player.h/2);
+    // Skepp mer realistiskt polygon + cockpit
     ctx.fillStyle="#00ffe7";
     ctx.shadowBlur=10;
     ctx.shadowColor="#00ffe7";
     ctx.beginPath();
-    ctx.moveTo(player.x + player.w/2, player.y);
-    ctx.lineTo(player.x + player.w*0.1, player.y + player.h*0.8);
-    ctx.lineTo(player.x + player.w*0.3, player.y + player.h*0.6);
-    ctx.lineTo(player.x + player.w*0.7, player.y + player.h*0.6);
-    ctx.lineTo(player.x + player.w*0.9, player.y + player.h*0.8);
+    ctx.moveTo(0, -player.h/2);             // spets fram
+    ctx.lineTo(-player.w/2, player.h/4);    // vänster bakkant
+    ctx.lineTo(-player.w/6, player.h/4);    // vänster inre
+    ctx.lineTo(-player.w/6, player.h/2);    // vänster motor
+    ctx.lineTo(player.w/6, player.h/2);     // höger motor
+    ctx.lineTo(player.w/6, player.h/4);     // höger inre
+    ctx.lineTo(player.w/2, player.h/4);     // höger bakkant
     ctx.closePath();
     ctx.fill();
+    // cockpit highlight
+    ctx.fillStyle="#88ffff";
+    ctx.beginPath();
+    ctx.ellipse(0, -player.h/8, player.w/8, player.h/8, 0, 0, Math.PI*2);
+    ctx.fill();
+    ctx.restore();
     ctx.shadowBlur=0;
 }
 
@@ -172,7 +176,6 @@ function drawAsteroid(a){
 }
 
 function drawPowerup(p){
-    // mer realistiska powerups med gradient
     const grad = ctx.createRadialGradient(p.x+p.w/2, p.y+p.h/2, 2, p.x+p.w/2, p.y+p.h/2, p.w/2);
     if(p.type==="doubleShot"){
         grad.addColorStop(0,"#fff176");
@@ -195,7 +198,7 @@ function update(){
     if(keys["ArrowRight"] || keys["d"]) player.x += player.speed;
     player.x = Math.max(0,Math.min(canvas.width-player.w,player.x));
 
-    bullets.forEach(b=>b.y -=8);
+    bullets.forEach(b=>b.y -=12); // snabbare skott
     bullets = bullets.filter(b=>b.y>-20);
 
     asteroids.forEach(a=> a.y += a.speed);
@@ -261,11 +264,7 @@ function draw(){
 }
 
 // ------------------- GAME LOOP -------------------
-function loop(){
-    update();
-    draw();
-    requestAnimationFrame(loop);
-}
+function loop(){ update(); draw(); requestAnimationFrame(loop); }
 
 function shoot(){
     if(shootCooldown>0) return;
@@ -274,7 +273,7 @@ function shoot(){
         bullets.push({x:player.x + player.w/2 - 12, y:player.y, w:4, h:10});
         bullets.push({x:player.x + player.w/2 + 8, y:player.y, w:4, h:10});
     }
-    shootCooldown = 15;
+    shootCooldown = 7; // snabbare skott
 }
 
 function gameOver(){ running=false; overlay.style.display="flex"; }
