--- a/spel2/index.html
+++ b/spel2/index.html
@@ -45,6 +45,7 @@ button {
     font-weight:bold;
     cursor:pointer;
 }
+button.home { background:#ff5555; }
 </style>
 </head>
 <body>
@@ -58,6 +59,7 @@ button {
     <div class="overlay" id="overlay">
         <h2>💀 GAME OVER</h2>
         <button onclick="restart()">Spela igen</button>
+        <button class="home" onclick="goHome()">Tillbaka till startsidan</button>
     </div>
 </div>
 
@@ -65,7 +67,7 @@ button {
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-let player, bullets, asteroids, powerups, keys, score, lives, running, shootCooldown, powerActive, difficulty, highscore;
+let player, bullets, asteroids, powerups, keys, score, lives, running, shootCooldown, powerActive, difficulty, highscore, maxShots;
 const scoreEl = document.getElementById("score");
 const livesEl = document.getElementById("lives");
 const highscoreEl = document.getElementById("highscore");
@@ -86,6 +88,7 @@ function init(){
     shootCooldown = 0;
     powerActive = false;
     difficulty = 1400;
+    maxShots = 3;
     scoreEl.textContent = score;
     livesEl.textContent = lives;
     overlay.style.display="none";
@@ -95,6 +98,7 @@ function init(){
 function spawnAsteroid(){
     if(asteroids.length >= 4) return;
     const size = 25 + Math.random()*20;
+    const life = 1 + Math.floor(Math.random()*3); // 1-3 liv per asteroid
     asteroids.push({
         x: Math.random()*(canvas.width-size),
         y: -size,
@@ -102,18 +106,23 @@ function spawnAsteroid(){
         h: size,
         speed: 1 + Math.random()*1.5 + score/500,
         rotation: Math.random()*Math.PI*2,
-        rotationSpeed: (Math.random()-0.5)*0.03
+        rotationSpeed: (Math.random()-0.5)*0.03,
+        life: life
     });
 }
 
 function spawnPowerup(){
     const size = 20;
+    const typeRand = Math.random();
+    let type = "doubleShot";
+    if(typeRand < 0.25) type = "fastShot";
+    else if(typeRand < 0.5) type = "extraShot"; // ökar max skott
     powerups.push({
         x: Math.random()*(canvas.width-size),
         y: -size,
         w: size,
         h: size,
-        type: Math.random()<0.5 ? "doubleShot" : "fastShot",
+        type: type,
         speed: 1.5
     });
 }
@@ -123,28 +132,27 @@ function drawPlayer(){
     ctx.save();
     ctx.translate(player.x + player.w/2, player.y + player.h/2);
 
-    // Skepp mer realistiskt: kropp, motorer, cockpit
     ctx.fillStyle="#00ffe7";
     ctx.shadowBlur=10;
     ctx.shadowColor="#00ffe7";
     ctx.beginPath();
-    ctx.moveTo(0, -player.h/2);           // spets fram
+    ctx.moveTo(0, -player.h/2);
     ctx.lineTo(-player.w/2.5, player.h/6);
     ctx.lineTo(-player.w/6, player.h/6);
-    ctx.lineTo(-player.w/6, player.h/2);  // vänster motor
-    ctx.lineTo(player.w/6, player.h/2);   // höger motor
+    ctx.lineTo(-player.w/6, player.h/2);
+    ctx.lineTo(player.w/6, player.h/2);
     ctx.lineTo(player.w/6, player.h/6);
     ctx.lineTo(player.w/2.5, player.h/6);
     ctx.closePath();
     ctx.fill();
 
-    // Cockpit
+    // cockpit
     ctx.fillStyle="#88ffff";
     ctx.beginPath();
     ctx.ellipse(0, -player.h/8, player.w/8, player.h/8, 0, 0, Math.PI*2);
     ctx.fill();
 
-    // Motor glow
+    // motor glow
     ctx.fillStyle="#ff9900";
     ctx.globalAlpha=0.5;
     ctx.beginPath();
@@ -187,13 +195,9 @@ function drawAsteroid(a){
 
 function drawPowerup(p){
     const grad = ctx.createRadialGradient(p.x+p.w/2, p.y+p.h/2, 2, p.x+p.w/2, p.y+p.h/2, p.w/2);
-    if(p.type==="doubleShot"){
-        grad.addColorStop(0,"#fff176");
-        grad.addColorStop(1,"#fbc02d");
-    } else {
-        grad.addColorStop(0,"#81c784");
-        grad.addColorStop(1,"#388e3c");
-    }
+    if(p.type==="doubleShot") { grad.addColorStop(0,"#fff176"); grad.addColorStop(1,"#fbc02d"); }
+    else if(p.type==="fastShot") { grad.addColorStop(0,"#81c784"); grad.addColorStop(1,"#388e3c"); }
+    else if(p.type==="extraShot") { grad.addColorStop(0,"#ff80ab"); grad.addColorStop(1,"#c2185b"); }
     ctx.fillStyle = grad;
     ctx.beginPath();
     ctx.arc(p.x + p.w/2, p.y + p.h/2, p.w/2, 0, Math.PI*2);
@@ -217,23 +221,23 @@ function update(){
         asteroids.forEach((a, ai)=>{
             if(b.x < a.x + a.w && b.x + b.w > a.x &&
                b.y < a.y + a.h && b.y + b.h > a.y){
-                asteroids.splice(ai,1);
+                a.life--;
                 bullets.splice(bi,1);
-                score += 10;
-                scoreEl.textContent = score;
-                if(score > highscore){
-                    highscore = score;
-                    highscoreEl.textContent = highscore;
-                    localStorage.setItem("asteroidHighscore", highscore);
-                }
-                if(score % 100 === 0 && difficulty > 500){
-                    difficulty -= 20;
+                if(a.life <= 0) {
+                    asteroids.splice(ai,1);
+                    score += 10;
+                    scoreEl.textContent = score;
+                    if(score > highscore){
+                        highscore = score;
+                        highscoreEl.textContent = highscore;
+                        localStorage.setItem("asteroidHighscore", highscore);
+                    }
                 }
             }
         });
     });
 
-    // Asteroider som faller förbi
+    // Asteroider som faller förbi spelaren
     asteroids.forEach((a,i)=>{
         if(a.y > canvas.height){
             asteroids.splice(i,1);
@@ -250,13 +254,14 @@ function update(){
         }
     });
 
-    powerups.forEach(p=> p.y += p.speed);
     powerups.forEach((p,i)=>{
+        p.y += p.speed;
         if(p.y + p.h > player.y &&
            p.x < player.x + player.w &&
            p.x + p.w > player.x){
             if(p.type==="doubleShot") powerActive = "doubleShot";
-            if(p.type==="fastShot") shootCooldown = Math.max(0, shootCooldown-5);
+            else if(p.type==="fastShot") shootCooldown = Math.max(0, shootCooldown-5);
+            else if(p.type==="extraShot") maxShots = Math.min(maxShots+1, 6); // max 6 skott
             powerups.splice(i,1);
         }
     });
@@ -288,16 +293,16 @@ function loop(){ update(); draw(); requestAnimationFrame(loop); }
 
 function shoot(){
     if(shootCooldown>0) return;
-    bullets.push({x:player.x + player.w/2 - 2, y:player.y, w:4, h:10});
-    if(powerActive==="doubleShot"){
-        bullets.push({x:player.x + player.w/2 - 12, y:player.y, w:4, h:10});
-        bullets.push({x:player.x + player.w/2 + 8, y:player.y, w:4, h:10});
+    for(let i=0;i<maxShots;i++){
+        bullets.push({x:player.x + player.w/2 - 2 + i*6 - (maxShots-1)*3, y:player.y, w:4, h:10});
     }
     shootCooldown = 7;
 }
 
 function gameOver(){ running=false; overlay.style.display="flex"; }
 function restart(){ init(); }
+
+function goHome(){ window.location.href="index.html"; }
 
 document.addEventListener("keydown", e=>{ keys[e.key]=true; if(e.key===" ") shoot(); });
 document.addEventListener("keyup", e=> keys[e.key]=false);
