--- a/spel2/index.html
+++ b/spel2/index.html
@@ -4,314 +4,276 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Asteroid Blaster 🚀</title>
+
 <style>
-body {
+body{
     margin:0;
-    background: radial-gradient(circle at top, #0a0a18, #020208);
+    background: radial-gradient(circle at top,#0a0a18,#020208);
     overflow:hidden;
-    font-family: Arial, sans-serif;
+    font-family:Arial, sans-serif;
     display:flex;
     justify-content:center;
     align-items:center;
     height:100vh;
     color:white;
 }
-.wrapper { position:relative; text-align:center; }
-h1 { color:#00ffe7; text-shadow:0 0 20px #00ffe7; }
-canvas { background:#000; border-radius:20px; box-shadow:0 0 40px #00ffe7; }
-.ui { margin:10px 0; }
-.overlay {
+
+.wrapper{ text-align:center; position:relative; }
+
+h1{
+    color:#00ffe7;
+    text-shadow:0 0 20px #00ffe7;
+}
+
+canvas{
+    background:#000;
+    border-radius:20px;
+    box-shadow:0 0 40px #00ffe7;
+}
+
+.ui{ margin:10px 0; }
+
+.overlay{
     position:absolute;
     inset:0;
-    display:flex;
-    background:rgba(0,0,0,0.8);
+    display:none;
+    background:rgba(0,0,0,0.85);
     justify-content:center;
     align-items:center;
     flex-direction:column;
     border-radius:20px;
-    display:none;
 }
-.overlay h2 {
-    color:#ff2e88;
-    font-size:2.5rem;
-    text-shadow:0 0 20px #ff2e88;
-}
-button {
-    margin-top:15px;
+
+button{
+    margin-top:12px;
     padding:12px 25px;
-    border-radius:10px;
     border:none;
-    background:#00ffe7;
+    border-radius:10px;
     font-weight:bold;
     cursor:pointer;
 }
-button.home { background:#ff5555; }
+
+.home{ background:#ff5555; }
+.play{ background:#00ffe7; }
 </style>
 </head>
+
 <body>
 
 <div class="wrapper">
     <h1>🚀 Asteroid Blaster</h1>
+
     <div class="ui">
-        Score: <span id="score">0</span> | Highscore: <span id="highscore">0</span> | Liv: <span id="lives">3</span>
+        Score: <span id="score">0</span> |
+        Highscore: <span id="highscore">0</span> |
+        Liv: <span id="lives">3</span>
     </div>
+
     <canvas id="game" width="420" height="500"></canvas>
+
     <div class="overlay" id="overlay">
         <h2>💀 GAME OVER</h2>
-        <button onclick="restart()">Spela igen</button>
-        <button class="home" onclick="goHome()">Tillbaka till startsidan</button>
+        <button class="play" onclick="restart()">Spela igen</button>
+        <button class="home" onclick="goHome()">← Startsidan</button>
     </div>
 </div>
+
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-let player, bullets, asteroids, powerups, keys, score, lives, running, shootCooldown, powerActive, difficulty, highscore, maxShots;
+let player, bullets, asteroids, keys;
+let score, lives, running, shootCooldown, maxShots;
+let asteroidInterval;
+
 const scoreEl = document.getElementById("score");
 const livesEl = document.getElementById("lives");
 const highscoreEl = document.getElementById("highscore");
 const overlay = document.getElementById("overlay");
 
-highscore = parseInt(localStorage.getItem("asteroidHighscore")) || 0;
+let highscore = parseInt(localStorage.getItem("asteroidHighscore")) || 0;
 highscoreEl.textContent = highscore;
 
+
+// ================= INIT =================
 function init(){
-    player = {x:canvas.width/2-20, y:canvas.height-50, w:40, h:40, speed:5};
-    bullets = [];
-    asteroids = [];
-    powerups = [];
-    keys = {};
-    score = 0;
-    lives = 3;
-    running = true;
-    shootCooldown = 0;
-    powerActive = false;
-    difficulty = 1400;
-    maxShots = 3;
-    scoreEl.textContent = score;
-    livesEl.textContent = lives;
+
+    player = {x:190,y:440,w:40,h:40,speed:5};
+
+    bullets=[];
+    asteroids=[];
+    keys={};
+
+    score=0;
+    lives=3;
+    running=true;
+    shootCooldown=0;
+    maxShots=3;
+
+    scoreEl.textContent=score;
+    livesEl.textContent=lives;
     overlay.style.display="none";
+
+    if(asteroidInterval) clearInterval(asteroidInterval);
+    asteroidInterval = setInterval(spawnAsteroid, 1200);
 }
 
-// ------------------- SPAWN -------------------
+
+// ================= SPAWN =================
 function spawnAsteroid(){
-    if(asteroids.length >= 4) return;
-    const size = 25 + Math.random()*20;
-    const life = 1 + Math.floor(Math.random()*3); // 1-3 liv per asteroid
+    if(!running) return;
+
+    const size = 25+Math.random()*20;
+
     asteroids.push({
-        x: Math.random()*(canvas.width-size),
-        y: -size,
-        w: size,
-        h: size,
-        speed: 1 + Math.random()*1.5 + score/500,
-        rotation: Math.random()*Math.PI*2,
-        rotationSpeed: (Math.random()-0.5)*0.03,
-        life: life
+        x:Math.random()*(canvas.width-size),
+        y:-size,
+        w:size,
+        h:size,
+        life:1+Math.floor(Math.random()*3),
+        speed:1.5+Math.random()*1.5
     });
 }
 
-function spawnPowerup(){
-    const size = 20;
-    const typeRand = Math.random();
-    let type = "doubleShot";
-    if(typeRand < 0.25) type = "fastShot";
-    else if(typeRand < 0.5) type = "extraShot"; // ökar max skott
-    powerups.push({
-        x: Math.random()*(canvas.width-size),
-        y: -size,
-        w: size,
-        h: size,
-        type: type,
-        speed: 1.5
-    });
-}
 
-// ------------------- DRAW -------------------
-function drawPlayer(){
+// ================= DRAW =================
+function drawShip(){
     ctx.save();
-    ctx.translate(player.x + player.w/2, player.y + player.h/2);
+    ctx.translate(player.x+20, player.y+20);
 
     ctx.fillStyle="#00ffe7";
-    ctx.shadowBlur=10;
-    ctx.shadowColor="#00ffe7";
     ctx.beginPath();
-    ctx.moveTo(0, -player.h/2);
-    ctx.lineTo(-player.w/2.5, player.h/6);
-    ctx.lineTo(-player.w/6, player.h/6);
-    ctx.lineTo(-player.w/6, player.h/2);
-    ctx.lineTo(player.w/6, player.h/2);
-    ctx.lineTo(player.w/6, player.h/6);
-    ctx.lineTo(player.w/2.5, player.h/6);
+    ctx.moveTo(0,-20);
+    ctx.lineTo(-14,12);
+    ctx.lineTo(14,12);
     ctx.closePath();
     ctx.fill();
 
-    // cockpit
-    ctx.fillStyle="#88ffff";
-    ctx.beginPath();
-    ctx.ellipse(0, -player.h/8, player.w/8, player.h/8, 0, 0, Math.PI*2);
-    ctx.fill();
-
-    // motor glow
-    ctx.fillStyle="#ff9900";
-    ctx.globalAlpha=0.5;
-    ctx.beginPath();
-    ctx.ellipse(-player.w/12, player.h/2, player.w/12, player.h/8, 0, 0, Math.PI*2);
-    ctx.fill();
-    ctx.beginPath();
-    ctx.ellipse(player.w/12, player.h/2, player.w/12, player.h/8, 0, 0, Math.PI*2);
-    ctx.fill();
-    ctx.globalAlpha=1;
     ctx.restore();
-    ctx.shadowBlur=0;
 }
 
-function drawBullet(b){
-    ctx.fillStyle="#ff2e88";
-    ctx.shadowBlur=5;
-    ctx.shadowColor="#ff2e88";
-    ctx.fillRect(b.x,b.y,b.w,b.h);
-    ctx.shadowBlur=0;
+function draw(){
+    ctx.fillStyle="black";
+    ctx.fillRect(0,0,canvas.width,canvas.height);
+
+    drawShip();
+
+    bullets.forEach(b=>{
+        ctx.fillStyle="#ff2e88";
+        ctx.fillRect(b.x,b.y,b.w,b.h);
+    });
+
+    asteroids.forEach(a=>{
+        ctx.fillStyle="#888";
+        ctx.beginPath();
+        ctx.arc(a.x+a.w/2,a.y+a.h/2,a.w/2,0,Math.PI*2);
+        ctx.fill();
+    });
 }
 
-function drawAsteroid(a){
-    ctx.save();
-    ctx.translate(a.x + a.w/2, a.y + a.h/2);
-    ctx.rotate(a.rotation);
-    ctx.fillStyle="#888"; 
-    ctx.beginPath();
-    const spikes = 5 + Math.floor(Math.random()*3);
-    const r = a.w/2;
-    for(let i=0;i<spikes;i++){
-        const angle = (i/spikes)*2*Math.PI;
-        const offset = r*0.3*Math.random();
-        ctx.lineTo(Math.cos(angle)*(r-offset), Math.sin(angle)*(r-offset));
-    }
-    ctx.closePath();
-    ctx.fill();
-    ctx.restore();
-    a.rotation += a.rotationSpeed;
-}
 
-function drawPowerup(p){
-    const grad = ctx.createRadialGradient(p.x+p.w/2, p.y+p.h/2, 2, p.x+p.w/2, p.y+p.h/2, p.w/2);
-    if(p.type==="doubleShot") { grad.addColorStop(0,"#fff176"); grad.addColorStop(1,"#fbc02d"); }
-    else if(p.type==="fastShot") { grad.addColorStop(0,"#81c784"); grad.addColorStop(1,"#388e3c"); }
-    else if(p.type==="extraShot") { grad.addColorStop(0,"#ff80ab"); grad.addColorStop(1,"#c2185b"); }
-    ctx.fillStyle = grad;
-    ctx.beginPath();
-    ctx.arc(p.x + p.w/2, p.y + p.h/2, p.w/2, 0, Math.PI*2);
-    ctx.fill();
-}
-
-// ------------------- UPDATE -------------------
+// ================= UPDATE =================
 function update(){
     if(!running) return;
 
-    if(keys["ArrowLeft"] || keys["a"]) player.x -= player.speed;
-    if(keys["ArrowRight"] || keys["d"]) player.x += player.speed;
+    if(keys["ArrowLeft"]) player.x -= player.speed;
+    if(keys["ArrowRight"]) player.x += player.speed;
+
     player.x = Math.max(0,Math.min(canvas.width-player.w,player.x));
 
-    bullets.forEach(b=>b.y -=12);
-    bullets = bullets.filter(b=>b.y>-20);
+    bullets.forEach(b=>b.y-=10);
+    bullets=bullets.filter(b=>b.y>-20);
 
-    asteroids.forEach(a=> a.y += a.speed);
+    asteroids.forEach(a=>a.y+=a.speed);
 
-    bullets.forEach((b, bi)=>{
-        asteroids.forEach((a, ai)=>{
-            if(b.x < a.x + a.w && b.x + b.w > a.x &&
-               b.y < a.y + a.h && b.y + b.h > a.y){
+    // collisions
+    bullets.forEach((b,bi)=>{
+        asteroids.forEach((a,ai)=>{
+            if(b.x<a.x+a.w && b.x+b.w>a.x && b.y<a.y+a.h && b.y+b.h>a.y){
                 a.life--;
                 bullets.splice(bi,1);
-                if(a.life <= 0) {
+                if(a.life<=0){
                     asteroids.splice(ai,1);
-                    score += 10;
-                    scoreEl.textContent = score;
-                    if(score > highscore){
-                        highscore = score;
-                        highscoreEl.textContent = highscore;
-                        localStorage.setItem("asteroidHighscore", highscore);
+                    score+=10;
+                    scoreEl.textContent=score;
+
+                    if(score>highscore){
+                        highscore=score;
+                        highscoreEl.textContent=score;
+                        localStorage.setItem("asteroidHighscore",score);
                     }
                 }
             }
         });
     });
 
-    // Asteroider som faller förbi spelaren
     asteroids.forEach((a,i)=>{
-        if(a.y > canvas.height){
-            asteroids.splice(i,1);
-            lives--;
-            livesEl.textContent=lives;
-            if(lives<=0) gameOver();
-        } else if(a.y + a.h > player.y &&
-                  a.x < player.x + player.w &&
-                  a.x + a.w > player.x){
+        if(a.y>canvas.height){
             asteroids.splice(i,1);
             lives--;
             livesEl.textContent=lives;
             if(lives<=0) gameOver();
         }
     });
-
-    powerups.forEach((p,i)=>{
-        p.y += p.speed;
-        if(p.y + p.h > player.y &&
-           p.x < player.x + player.w &&
-           p.x + p.w > player.x){
-            if(p.type==="doubleShot") powerActive = "doubleShot";
-            else if(p.type==="fastShot") shootCooldown = Math.max(0, shootCooldown-5);
-            else if(p.type==="extraShot") maxShots = Math.min(maxShots+1, 6);
-            powerups.splice(i,1);
-        }
-    });
-    powerups = powerups.filter(p => p.y < canvas.height + 30);
 
     if(shootCooldown>0) shootCooldown--;
 }
 
-// ------------------- DRAW -------------------
-function drawStars(){
-    ctx.fillStyle="white";
-    for(let i=0;i<30;i++){
-        ctx.fillRect(Math.random()*canvas.width, Math.random()*canvas.height,1,1);
-    }
+
+// ================= LOOP =================
+function loop(){
+    update();
+    draw();
+    requestAnimationFrame(loop);
 }
 
-function draw(){
-    ctx.fillStyle="black";
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-    drawStars();
-    drawPlayer();
-    bullets.forEach(drawBullet);
-    asteroids.forEach(drawAsteroid);
-    powerups.forEach(drawPowerup);
-}
 
-// ------------------- GAME LOOP -------------------
-function loop(){ update(); draw(); requestAnimationFrame(loop); }
-
+// ================= ACTIONS =================
 function shoot(){
     if(shootCooldown>0) return;
+
     for(let i=0;i<maxShots;i++){
-        bullets.push({x:player.x + player.w/2 - 2 + i*6 - (maxShots-1)*3, y:player.y, w:4, h:10});
+        bullets.push({
+            x:player.x+18+i*6-(maxShots-1)*3,
+            y:player.y,
+            w:4,
+            h:10
+        });
     }
-    shootCooldown = 7;
+
+    shootCooldown=8;
 }
 
-function gameOver(){ running=false; overlay.style.display="flex"; }
-function restart(){ init(); }
-    
-window.location.href="../index.html";
+function gameOver(){
+    running=false;
+    overlay.style.display="flex";
+}
 
-document.addEventListener("keydown", e=>{ keys[e.key]=true; if(e.key===" ") shoot(); });
-document.addEventListener("keyup", e=> keys[e.key]=false);
+function restart(){
+    init();
+}
 
-setInterval(()=>spawnAsteroid(), difficulty);
-setInterval(()=>spawnPowerup(), 4000);
+function goHome(){
+    running=false;
+    clearInterval(asteroidInterval);
+    window.location.href="../index.html";
+}
 
+
+// ================= CONTROLS =================
+document.addEventListener("keydown",e=>{
+    keys[e.key]=true;
+    if(e.key===" ") shoot();
+});
+
+document.addEventListener("keyup",e=>keys[e.key]=false);
+
+
+// start
 init();
 loop();
 </script>
+
 </body>
 </html>
