--- a/spel2/index.html
+++ b/spel2/index.html
@@ -2,15 +2,13 @@
 <html lang="sv">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Asteroid Blaster 🚀</title>
+<title>Space Shooter 🚀</title>
 
 <style>
 body{
     margin:0;
-    background: radial-gradient(circle at top,#0a0a18,#020208);
-    overflow:hidden;
-    font-family:Arial, sans-serif;
+    background: radial-gradient(circle,#050510,#000);
+    font-family:Arial;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -18,20 +16,13 @@ body{
     color:white;
 }
 
-.wrapper{ text-align:center; position:relative; }
-
-h1{
-    color:#00ffe7;
-    text-shadow:0 0 20px #00ffe7;
-}
+.wrapper{text-align:center;position:relative}
 
 canvas{
-    background:#000;
+    background:black;
     border-radius:20px;
-    box-shadow:0 0 40px #00ffe7;
+    box-shadow:0 0 40px cyan;
 }
-
-.ui{ margin:10px 0; }
 
 .overlay{
     position:absolute;
@@ -41,236 +32,196 @@ canvas{
     justify-content:center;
     align-items:center;
     flex-direction:column;
-    border-radius:20px;
 }
 
 button{
-    margin-top:12px;
     padding:12px 25px;
+    margin-top:10px;
     border:none;
     border-radius:10px;
     font-weight:bold;
     cursor:pointer;
 }
 
-.home{ background:#ff5555; }
-.play{ background:#00ffe7; }
+.home{background:#ff5555}
+.play{background:#00ffe7}
 </style>
 </head>
 
 <body>
 
 <div class="wrapper">
-    <h1>🚀 Asteroid Blaster</h1>
+<h1>🚀 Space Shooter</h1>
 
-    <div class="ui">
-        Score: <span id="score">0</span> |
-        Highscore: <span id="highscore">0</span> |
-        Liv: <span id="lives">3</span>
-    </div>
-
-    <canvas id="game" width="420" height="500"></canvas>
-
-    <div class="overlay" id="overlay">
-        <h2>💀 GAME OVER</h2>
-        <button class="play" onclick="restart()">Spela igen</button>
-        <button class="home" onclick="goHome()">← Startsidan</button>
-    </div>
+<div>
+Score: <span id="score">0</span> |
+Highscore: <span id="high">0</span> |
+Liv: <span id="lives">3</span>
 </div>
 
+<canvas id="game" width="420" height="500"></canvas>
+
+<div class="overlay" id="over">
+<h2>💀 GAME OVER</h2>
+<button class="play" onclick="restart()">Spela igen</button>
+<button class="home" onclick="goHome()">← Startsidan</button>
+</div>
+</div>
 
 <script>
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
+const c = game;
+const ctx = c.getContext("2d");
 
-let player, bullets, asteroids, keys;
-let score, lives, running, shootCooldown, maxShots;
-let asteroidInterval;
+let player, bullets, asteroids;
+let score=0,lives=3,running=true,cd=0;
+let high = localStorage.getItem("hs")||0;
+highEl.textContent = high;
 
-const scoreEl = document.getElementById("score");
-const livesEl = document.getElementById("lives");
-const highscoreEl = document.getElementById("highscore");
-const overlay = document.getElementById("overlay");
-
-let highscore = parseInt(localStorage.getItem("asteroidHighscore")) || 0;
-highscoreEl.textContent = highscore;
-
-
-// ================= INIT =================
 function init(){
-
-    player = {x:190,y:440,w:40,h:40,speed:5};
-
-    bullets=[];
-    asteroids=[];
-    keys={};
-
-    score=0;
-    lives=3;
-    running=true;
-    shootCooldown=0;
-    maxShots=3;
-
-    scoreEl.textContent=score;
-    livesEl.textContent=lives;
-    overlay.style.display="none";
-
-    if(asteroidInterval) clearInterval(asteroidInterval);
-    asteroidInterval = setInterval(spawnAsteroid, 1200);
+player={x:190,y:440,w:40,h:40};
+bullets=[];
+asteroids=[];
+score=0;
+lives=3;
+running=true;
+scoreEl.textContent=0;
+livesEl.textContent=3;
+over.style.display="none";
 }
 
+function spawn(){
+if(!running) return;
 
-// ================= SPAWN =================
-function spawnAsteroid(){
-    if(!running) return;
-
-    const size = 25+Math.random()*20;
-
-    asteroids.push({
-        x:Math.random()*(canvas.width-size),
-        y:-size,
-        w:size,
-        h:size,
-        life:1+Math.floor(Math.random()*3),
-        speed:1.5+Math.random()*1.5
-    });
+asteroids.push({
+x:Math.random()*390,
+y:-20,
+size:20+Math.random()*20,
+life:1+Math.floor(Math.random()*3),
+speed:2
+});
 }
 
+setInterval(spawn,1200);
 
-// ================= DRAW =================
 function drawShip(){
-    ctx.save();
-    ctx.translate(player.x+20, player.y+20);
+ctx.save();
+ctx.translate(player.x+20,player.y+20);
 
-    ctx.fillStyle="#00ffe7";
-    ctx.beginPath();
-    ctx.moveTo(0,-20);
-    ctx.lineTo(-14,12);
-    ctx.lineTo(14,12);
-    ctx.closePath();
-    ctx.fill();
+/* COOLARE SKEPP */
+ctx.fillStyle="#00ffe7";
+ctx.beginPath();
+ctx.moveTo(0,-20);
+ctx.lineTo(-15,15);
+ctx.lineTo(-5,10);
+ctx.lineTo(0,15);
+ctx.lineTo(5,10);
+ctx.lineTo(15,15);
+ctx.closePath();
+ctx.fill();
 
-    ctx.restore();
+ctx.fillStyle="white";
+ctx.beginPath();
+ctx.arc(0,-5,5,0,6.28);
+ctx.fill();
+
+ctx.fillStyle="orange";
+ctx.fillRect(-4,15,8,10);
+
+ctx.restore();
+}
+
+function update(){
+
+if(!running) return;
+
+if(keys["ArrowLeft"]) player.x-=5;
+if(keys["ArrowRight"]) player.x+=5;
+
+bullets.forEach(b=>b.y-=10);
+bullets=bullets.filter(b=>b.y>-10);
+
+asteroids.forEach(a=>a.y+=a.speed);
+
+/* collisions */
+bullets.forEach((b,bi)=>{
+asteroids.forEach((a,ai)=>{
+if(b.x<a.x+a.size && b.x+4>a.x && b.y<a.y+a.size && b.y+10>a.y){
+a.life--;
+bullets.splice(bi,1);
+if(a.life<=0){
+asteroids.splice(ai,1);
+score+=10;
+scoreEl.textContent=score;
+if(score>high){
+high=score;
+localStorage.setItem("hs",score);
+highEl.textContent=score;
+}
+}
+}
+});
+});
+
+asteroids.forEach((a,i)=>{
+if(a.y>500){
+asteroids.splice(i,1);
+lives--;
+livesEl.textContent=lives;
+if(lives<=0) gameOver();
+}
+});
+
+if(cd>0) cd--;
 }
 
 function draw(){
-    ctx.fillStyle="black";
-    ctx.fillRect(0,0,canvas.width,canvas.height);
+ctx.fillStyle="black";
+ctx.fillRect(0,0,420,500);
 
-    drawShip();
+drawShip();
 
-    bullets.forEach(b=>{
-        ctx.fillStyle="#ff2e88";
-        ctx.fillRect(b.x,b.y,b.w,b.h);
-    });
+ctx.fillStyle="pink";
+bullets.forEach(b=>ctx.fillRect(b.x,b.y,4,10));
 
-    asteroids.forEach(a=>{
-        ctx.fillStyle="#888";
-        ctx.beginPath();
-        ctx.arc(a.x+a.w/2,a.y+a.h/2,a.w/2,0,Math.PI*2);
-        ctx.fill();
-    });
+ctx.fillStyle="gray";
+asteroids.forEach(a=>{
+ctx.beginPath();
+ctx.arc(a.x,a.y,a.size/2,0,6.28);
+ctx.fill();
+});
 }
 
-
-// ================= UPDATE =================
-function update(){
-    if(!running) return;
-
-    if(keys["ArrowLeft"]) player.x -= player.speed;
-    if(keys["ArrowRight"]) player.x += player.speed;
-
-    player.x = Math.max(0,Math.min(canvas.width-player.w,player.x));
-
-    bullets.forEach(b=>b.y-=10);
-    bullets=bullets.filter(b=>b.y>-20);
-
-    asteroids.forEach(a=>a.y+=a.speed);
-
-    // collisions
-    bullets.forEach((b,bi)=>{
-        asteroids.forEach((a,ai)=>{
-            if(b.x<a.x+a.w && b.x+b.w>a.x && b.y<a.y+a.h && b.y+b.h>a.y){
-                a.life--;
-                bullets.splice(bi,1);
-                if(a.life<=0){
-                    asteroids.splice(ai,1);
-                    score+=10;
-                    scoreEl.textContent=score;
-
-                    if(score>highscore){
-                        highscore=score;
-                        highscoreEl.textContent=score;
-                        localStorage.setItem("asteroidHighscore",score);
-                    }
-                }
-            }
-        });
-    });
-
-    asteroids.forEach((a,i)=>{
-        if(a.y>canvas.height){
-            asteroids.splice(i,1);
-            lives--;
-            livesEl.textContent=lives;
-            if(lives<=0) gameOver();
-        }
-    });
-
-    if(shootCooldown>0) shootCooldown--;
-}
-
-
-// ================= LOOP =================
 function loop(){
-    update();
-    draw();
-    requestAnimationFrame(loop);
+update();
+draw();
+requestAnimationFrame(loop);
 }
 
-
-// ================= ACTIONS =================
 function shoot(){
-    if(shootCooldown>0) return;
-
-    for(let i=0;i<maxShots;i++){
-        bullets.push({
-            x:player.x+18+i*6-(maxShots-1)*3,
-            y:player.y,
-            w:4,
-            h:10
-        });
-    }
-
-    shootCooldown=8;
+if(cd>0) return;
+bullets.push({x:player.x+18,y:player.y});
+cd=8;
 }
 
 function gameOver(){
-    running=false;
-    overlay.style.display="flex";
+running=false;
+over.style.display="flex";
 }
 
-function restart(){
-    init();
-}
+function restart(){init();}
 
 function goHome(){
-    running=false;
-    clearInterval(asteroidInterval);
-    window.location.href="../index.html";
+window.location.href="../index.html";
 }
 
-
-// ================= CONTROLS =================
+/* controls */
+let keys={};
 document.addEventListener("keydown",e=>{
-    keys[e.key]=true;
-    if(e.key===" ") shoot();
+keys[e.key]=true;
+if(e.key===" ") shoot();
 });
-
 document.addEventListener("keyup",e=>keys[e.key]=false);
 
-
-// start
 init();
 loop();
 </script>
